# KinFrameWork

./: .gitignore  KinCommonFunction.cmake  KinCommonSetting.cmake  Readme.md
ChaiScript/: FindKinBase.cmake
Date/: FindDate.cmake
KinBase/: CMakeLists.txt  FindKinBase.cmake  License.md
KinBase/Source/: CMakeLists.txt
KinBase/Source/Example/: CMakeLists.txt  MyTestLib.cpp  MyTestLib.h  ObjectTest.cpp  SomeTest.cpp  TestCircleBuffer.cpp  TestCircleBuffer.h  TestClass.cpp  TestClass.h  TestException.cpp  main.cpp
KinBase/Source/KinBase/: CMakeLists.txt  EventDispatcher.cpp  EventDispatcher.h  EventDispatcher.hpp  KinBase.h  KinBase.hpp  KinCodeInfo.h  KinCodeInfo.hpp  KinException.cpp  KinException.h  KinException.hpp  KinFileSystem.h  KinFileSystem.hpp  KinLog.h  KinLog.hpp  KinMacroDefine.h  Object.cpp  Object.h  ObjectTransferTrack.h  SingleObject.h  TemplateHelp.h  ThreadPool.h  ThreadPool.hpp  VariableProperties.cpp  VariableProperties.h  empty.cpp
KinBase/Source/Test/: CMakeLists.txt  TestException.cpp  TestLog.cpp  main.cpp
KinException/: Readme.md
KinException/Source/Example/: main.cpp
KinException/Source/KinException/: Exception.cpp  Exception.h  KinException.h
KinLua/: CMakeLists.txt  FindKinLua.cmake  License.md  Readme.md  lua.h
KinLua/Examples/: CMakeLists.txt  main.cpp  mytest.lua  testLua.lua
KinLua/Source/: CMakeLists.txt
KinLua/Source/KinLua/: CMakeLists.txt  Lua.cpp  Lua.h  LuaEngine.cpp  LuaEngine.h  LuaEnumDefine.h  LuaVariable.cpp  LuaVariable.h
KinLua/Source/Lua/: CMakeLists.txt  KinLuaSupportInterface.cpp  KinLuaSupportInterface.h
KinMedia/: .gitignore  KinMedia.sln
KinMedia/KinMedia/: KinMedia.vcxproj  KinMedia.vcxproj.filters
KinMedia/KinMedia/KinMedia/: AudioFrameTranslater.cpp  AudioFrameTranslater.h  CircularBuffer.cpp  CircularBuffer.h  FFmpegInclude.h  MediaCodeCtx.cpp  MediaCodeCtx.h  MediaDecoder.cpp  MediaDecoder.h  MediaEncoder.cpp  MediaEncoder.h  MediaFrame.cpp  MediaFrame.h  MediaFrameTranslater.cpp  MediaFrameTranslater.h  MediaInclude.h  MediaInputFile.cpp  MediaInputFile.h  MediaInputStream.cpp  MediaInputStream.h  MediaManager.cpp  MediaManager.h  MediaOutputFile.cpp  MediaOutputFile.h  MediaOutputStream.cpp  MediaOutputStream.h  MediaPacket.cpp  MediaPacket.h  MediaPicConvert.cpp  MediaPicConvert.h  MediaPlayer.cpp  MediaPlayer.h  MediaPlayerBase.cpp  MediaPlayerBase.h  MediaStream.cpp  MediaStream.h  MediaStreamBlend.cpp  MediaStreamBlend.h  MediaStruct.h  VideoFrameTranslater.cpp  (+5 more)
KinScirpt/: CMakeLists.txt
KinScirpt/Example/: CMakeLists.txt  main.cpp
KinScript/: CMakeLists.txt  FindKinScript.cmake
KinScript/Example/: CMakeLists.txt  main.cpp
KinScript/Source/: CMakeLists.txt
KinSdl/: FindKinSdl.cmake  License.md
Lua/: CMakeLists.txt  FindKinLua.cmake  KinLua.h
LuaCore/: CMakeLists.txt  FindLuaCore.cmake
LuaCore/Source/: CMakeLists.txt
SystemControl/: CMakeLists.txt  FindSystemControl.cmake
SystemControl/Source/: CMakeLists.txt
boost/: FindKinBoost.cmake  ReadMe.md
catch2/: Findcatch2.cmake
concurrentqueue/: Findconcurrentqueue.cmake
nlohmann/: Findnlohmann.cmake
sol2/: Findsol2.cmake
spdlog/: Findspdlog.cmake
taskflow/: Findtaskflow.cmake
websocketpp/: Findwebsocketpp.cmake
(+15 files in other folders)
